# sahool-unified-v15-idp

./: .dockerignore  .env.development.template  .env.example  .env.template  .env.vector.example  .eslintrc.base.json  .gitattributes  .gitignore  .gitleaks.toml  .hadolint.yaml  .kube-linter.yaml  .pre-commit-config.yaml  .secrets.baseline  .semgrepignore  .trivyignore  2FA_IMPLEMENTATION_SUMMARY.md  2FA_QUICK_START.md  404.html  ADDITIONAL_IMPROVEMENTS_SUMMARY.md  AGRO_ADVISOR_MIGRATION_SUMMARY.md  AI_GUARDRAILS_SUMMARY.md  AI_SKILLS_METRICS_SUMMARY.md  ALERT_SERVICE_MIGRATION_SUMMARY.md  ANIMATION_SYSTEM_SUMMARY.md  API_ENDPOINT_FIX_SUMMARY.md  API_ENDPOINT_VALIDATION_REPORT.md  API_FIXES_SUMMARY.md  API_VERSIONING_IMPLEMENTATION_SUMMARY.md  APPLY_PATCH_INSTRUCTIONS.md  ARCHITECTURE_ANALYSIS.md  AUDIT_REPORT.md  AUTO_REVIEW_REPORT.md  BEST_OPTION_SUMMARY.md  BUILD_GUIDE.md  BUILD_VALIDATION_REPORT.md  CACHING_IMPROVEMENTS_COMPLETE.md  CERTIFICATE_ROTATION_IMPLEMENTATION.md  CHANGELOG.md  CHANGELOG_DLQ.md  CHANGES_VERIFICATION.md  (+179 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  pull_request_template.md  secret-patterns.txt
A2A_IMPLEMENTATION_SUMMARY/: index.html
ADMIN_WEB_AUDIT_REPORT/: index.html
AI_ARCHITECTURE/: index.html
API_GATEWAY/: index.html
API_V2_MIGRATION_GUIDE/: index.html
API_VERSIONING_QUICK_REFERENCE/: index.html
API_VERSIONING_STRATEGY/: index.html
ARCH_RULES/: index.html
ASTRONOMICAL_CALENDAR_SERVICE/: index.html
AUTH_UX_AUDIT_REPORT/: index.html
BACKEND_SERVICES_DOCUMENTATION/: index.html
BILLING_QUOTAS/: index.html
CERTIFICATE_ROTATION/: index.html
CERTIFICATE_ROTATION_QUICKSTART/: index.html
CHANGELOG_ARCHITECTURE/: index.html
CHANGELOG_FIX_GITHUB_ACTIONS/: index.html
CI_ISSUES_RESOLVED/: index.html
CI_TROUBLESHOOTING/: index.html
COMPREHENSIVE_AUDIT_REPORT/: index.html
DATABASE_CONFIGURATION_GUIDE/: index.html
DATABASE_CONNECTION_POOLING/: index.html
DATABASE_QUERY_OPTIMIZATIONS/: index.html
DATABASE_TLS_CONFIGURATION/: index.html
DATA_FLOW/: index.html
DEPLOYMENT/: index.html
DEPLOYMENT_STRATEGIES/: index.html
DEPRECATED_SERVICES/: index.html
DOCKER/: index.html
ENVIRONMENT/: index.html
EVENT_CATALOG/: index.html
FEATURE_FLAGS/: index.html
FIX_GITHUB_ACTIONS_CACHE_FAILURES/: index.html
FRONTEND_REVIEW_SUMMARY/: index.html
FUTURE_ROADMAP/: index.html
GIS_ARCHITECTURE/: index.html
IDP_ARCHITECTURE/: index.html
INFRASTRUCTURE/: index.html
KERNEL_SERVICES_MERGE_PLAN/: index.html
KONG_CONFIGURATION_GUIDE/: index.html
LEGACY_SERVICES/: index.html
MCP_INTEGRATION/: index.html
MIDDLEWARE_ADOPTION_REPORT/: index.html
MIGRATIONS/: index.html
MOBILE_API_INTEGRATION_GUIDE/: index.html
MOBILE_APP_AUDIT_REPORT/: index.html
MOBILE_APP_REVIEW_REPORT/: index.html
MOBILE_ARCHITECTURE_ANALYSIS/: index.html
MULTI_REGION/: index.html
NATS_CLUSTER_SETUP/: index.html
NATS_MONITORING/: index.html
NATS_NKEY_SETUP/: index.html
OBSERVABILITY/: index.html
OPEN_SOURCE_INTEGRATION/: index.html
OPERATIONAL_SETUP/: index.html
OPERATIONS/: index.html
ORM_AUDIT_SUMMARY/: index.html
ORM_DOCUMENTATION_INDEX/: index.html
ORM_MIGRATION_QUICK_REFERENCE/: index.html
ORM_STANDARDIZATION/: index.html
PHASE1_DEPENDENCY_ANALYSIS/: index.html
PHASE_D_MAJOR_UPGRADES_PLAN/: index.html
PLATFORM_ROADMAP_NEXT/: index.html
PLATFORM_STRATEGY/: index.html
PREVIEW_DEPLOYMENT/: index.html
PRISMA_SERVICE_TEMPLATE/: index.html
PRODUCTION_DEPLOYMENT/: index.html
PR_PREVIEW_ENVIRONMENTS/: index.html
PR_PREVIEW_URLS/: index.html
RATE_LIMITING/: index.html
REFRESH_TOKEN_ROTATION/: index.html
REPOSITORY_STRUCTURE/: index.html
RUNBOOKS/: index.html
SECRETS_GITOPS/: index.html
SECRETS_MANAGEMENT/: index.html
SECRETS_ROTATION_POLICY/: index.html
SECRETS_SETUP/: index.html
SECURITY/: index.html
SECURITY_HARDENING/: index.html
SERVICES_MAP/: index.html
SERVICE_CONSOLIDATION_MAP/: index.html
SERVICE_PORTFOLIO_REVIEW/: index.html
SHARED_MIDDLEWARE_GUIDE/: index.html
SLO_SLI_GUIDE/: index.html
TESTING/: index.html
TEST_COVERAGE_ANALYSIS/: index.html
TLS_CONFIGURATION/: index.html
UNIFIED_PACKAGES_GUIDE/: index.html
WEB_APP_DEVELOPMENT_PLAN/: index.html
WEB_DASHBOARD_API_INTEGRATION_GUIDE/: index.html
WINDOWS_COMMANDS/: index.html
adr/: index.html
advisor/: __init__.py
api/: README.md  SAHOOL.postman_collection.json  agro-advisor.html  ai.md  authentication.md  billing-core.html  crop-health-ai.html  crop-health.html  docker-compose.docs.yml  field-ops.html  fields.md  inventory-service.html  irrigation-smart.html  ndvi-engine.html  nginx.conf  openapi-aggregator.py  satellite-service.html  weather-advanced.html  weather-core.html  yield-engine.html
apps/: DOCKER_WEB_APPS.md
backup-strategy/: index.html
code-engineer/: 00-intake.md  01-observations.md  02-fix-plan.md  99-fix-summary.md
config/: README.md  base.env  ci.env  local.env  prod.env  service-registry.yaml
dev/: README.md
disaster-recovery/: index.html
docker/: Dockerfile.node.base  Dockerfile.python.base  compose.dev.yml  compose.generated.yml  compose.prod.yml  compose.staging.yml  docker-compose.dlq.yml  docker-compose.infra.yml  docker-compose.iot.yml  docker-compose.secrets.yml  docker-compose.vector.yml
docs/: A2A_IMPLEMENTATION_SUMMARY.md  ADMIN_WEB_AUDIT_REPORT.md  AI_ARCHITECTURE.md  AI_LLM_IMPROVEMENTS.md  AI_LLM_IMPROVEMENTS_AR.md  AI_LLM_REVIEW_FINAL_REPORT.md  API_GATEWAY.md  API_REFERENCE.md  API_V2_MIGRATION_GUIDE.md  API_VERSIONING_QUICK_REFERENCE.md  API_VERSIONING_STRATEGY.md  ARCH_RULES.md  ASTRONOMICAL_CALENDAR_SERVICE.md  AUTH_UX_AUDIT_REPORT.md  BACKEND_SERVICES_DOCUMENTATION.md  BILLING_QUOTAS.md  CERTIFICATE_ROTATION.md  CERTIFICATE_ROTATION_QUICKSTART.md  CHANGELOG_ARCHITECTURE.md  CHANGELOG_FIX_GITHUB_ACTIONS.md  CI_ISSUES_RESOLVED.md  CI_TROUBLESHOOTING.md  COMPREHENSIVE_AUDIT_REPORT.md  DATABASE_CONFIGURATION_GUIDE.md  DATABASE_CONNECTION_POOLING.md  DATABASE_QUERY_OPTIMIZATIONS.md  DATABASE_TLS_CONFIGURATION.md  DATA_FLOW.md  (+79 more)
(+5205 files in other folders)
